Fix list overflow styling

--- a/src/Component/SideMenu/SideMenu.css
+++ b/src/Component/SideMenu/SideMenu.css
@@ -13,6 +13,7 @@
 
 .NoteListContainer {
     width: 100%;
+    overflow: auto;
 }
 
 .NoteItem {
